argo-workflows/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-workflows-ui
  namespace: argo
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: argo-gateway
    namespace: gateway
    sectionName: argo-workflows
  hostnames:
  - argo-workflows.k8s.orb.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argo-server
      port: 2746
